--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>sample</title>
+    <title>Leaflet_magn01ia
 
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    </title>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link href="stylesheet.css" rel="stylesheet" />
-
+    <script src="./plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.js"></script>
+    <link href="./plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
+    <script src="data////.geojson"></script>
+    <script src="data////.geojson"></script>
+    <script src="data////.geojson"></script>
 </head>
 
 <body>
