--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.js"></script>
     <link href="./plugin/Leaflet.Control.Opacity/dist/L.Control.Opacity.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
+    <script src="data/test.geojson"></script>
 
 </head>
 
